# rust_todo_sqlite

./: .gitignore  Cargo.toml  README.md
migrations/: 20240423053133_create_todos_table.sql
src/: main.rs
src/utils/: add.rs  complete.rs  list.rs  mod.rs  remove.rs  update.rs
