[package]
name = "rust_todo_sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
dotenv = "0.15.0"
sqlx = {version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls"]}
structopt = "0.3.26"
tokio = {version = "1.37.0", features = ["rt", "macros"]}
